# zyn

./: .gitignore  README.md  readme.md  todo
docker/: docker-compose-prod-base.yml  docker-compose-prod-template.yml  docker-compose.yml  dockerfile-web-client  dockerfile-zyn  entrypoint.sh
env/scripts/: install-rust-debian.sh  prepare-encryption-keys.sh  set-dev-env-variables.sh  zyn-dev-env.sh
js/: esbuild.mjs  package-lock.json  package.json  tailwind.config.js
js/css/: zyn.css
js/src/: client.js  client.mjs  common.js  common.mjs  connection.js  connection.mjs  file.js  file.mjs  file_list.mjs  file_markdown.mjs  file_pdf.mjs  main.js  main.mjs  messages.js  messages.mjs
js/test/: common.mjs  test_file.mjs
py/: requirements.txt  setup.py
py/tools/: create-error-codes.py
py/zyn/: connection.py  exception.py  (+5 more)
tests/: common.py  pytest.ini  setup.py  test_basic_cases.py  test_client.py  test_edit_files.py  test_multiple_connections.py  test_util.py
zyn/: Cargo.toml  build.rs
zyn/src/: lib.rs  main.rs
zyn/src/libressl/: mod.rs  readme.md  tls.rs
zyn/src/node/: client.rs  client_protocol_buffer.rs  common.rs  connection.rs  crypto.rs  crypto_gpg.rs  directory.rs  file.rs  file_handle.rs  filesystem.rs  folder.rs  mod.rs  node.rs  serialize.rs  socket.rs  test_client_protocol_buffer.rs  test_connection.rs  test_crypto.rs  test_crypto_gpg.rs  test_file.rs  test_filesystem.rs  test_protocol_buffer.rs  test_socket.rs  test_tls_connection.rs  test_user_authority.rs  test_util.rs  tls_connection.rs  user_authority.rs
zyn/src/tests/: mod.rs  test_mock.rs
(+113 files in other folders)
