[package]
name = "zyn"
version = "0.9.0"
authors = ["Olli Huurinainen <huurinainen.olli@gmail.com>"]
publish = false

[dependencies]
libc = "=0.2.*"
chrono = "=0.4.*"
log = "=0.4"
env_logger = "=0.8"
rand = "=0.4"
sha2 = "=0.9"
embedded-websocket = "0.3.2"

# Serialization
serde = "=1.*"
serde_derive = "=1.*"
serde_json = "=1.*"

[dev-dependencies]
tempdir = "=0.3"
